# png-studio

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  add_credit.py  add_credit_final.py  add_watermark.py  deep_rebrand.py  rebrand.py  replace_icons.py  vcpkg.json
.github/workflows/: windows-release.yml
catalog-src/: categories.json
catalog-src/language-sets/: nemotron-3.5-v1.json  whisper-v1.json
catalog-src/picks/: lastudio-picks.json  pngstudio-picks.json
cmake/: AppVersion.h.in  CompilerOptions.cmake  Dependencies.cmake
data/: catalog.json  catalog.schema.json  registry_schema.sql
data/language-sets/: default.json  omnivoice-v1.json
docs/: BUILD.md  README.md
docs/architecture/: catalog_registry.md
examples/: README.md
examples/tts/: README.md
examples/tts/capabilities/: mixed-language-vi-en.json  non-verbal-tags-vieneu-v3.json
examples/tts/common/: basic-en.json  basic-vi.json
examples/tts/models/: vieneu-tts-v3-turbo.json
examples/voice-cloning/: README.md  vieneu-tts-v3-turbo.json
i18n/: lastudio_vi.ts  pngstudio_vi.ts
include/runtimes/: CrispCommon.h  CrispKokoroInterface.h  CrispNemotronSttInterface.h  CrispQwen3SttInterface.h  CrispQwen3TtsInterface.h  CrispVibeVoiceInterface.h  CrispVoxCpm2Interface.h  ISttRuntime.h  ITtsRuntime.h  KokoroVietnameseInterface.h  OmnivoiceInterface.h  SpeechLmTtsInterface.h  VibevoiceInterface.h  VieneuTtsInterface.h  WhisperInterface.h
qml/: Main.qml  Theme.qml
qml/components/: AppTitleBar.qml  AudioDropArea.qml  BottomLogPanel.qml  CommunityDialog.qml  DownloadProgressBar.qml  DownloadsPopup.qml  ModelCard.qml  ModelDetailsView.qml  ModelListItem.qml  PrimaryButton.qml  RuntimeVersionManagerDialog.qml  SearchBar.qml  Sidebar.qml  WaveformView.qml  WorkflowPopup.qml
qml/components/base/: AppComboBox.qml  AppContextMenu.qml  AppTabButton.qml  AppTextArea.qml  AppToolTip.qml  ConfirmationDialog.qml  LineIcon.qml  ModelDependenciesDialog.qml
qml/components/shared/: AudioInputSourcePicker.qml  CapabilityGallery.qml  ExamplePickerDialog.qml  GeneratedAudioOutput.qml  LoadedModelDialog.qml  PromptTagPicker.qml  StudioContext.qml  StudioHeaderBar.qml  StudioPageFrame.qml  StudioRouteRegistry.qml  StudioShell.qml  VoiceLibraryDialog.qml
qml/components/stt/: SttHistoryPanel.qml  SttInputSection.qml  SttSettingsPanel.qml  SttStudioView.qml  SttTranscriptionView.qml
qml/components/tts/: TtsHistoryPanel.qml  TtsSettingsPanel.qml  TtsStudioView.qml
qml/components/voicecloning/: AudioDisplayBox.qml  InputSourceTabs.qml  ModelSelectorPopup.qml  ReferenceInputBox.qml  VoiceCloningSetupPanel.qml  VoiceCloningStudioView.qml  VoiceSettingsPanel.qml
qml/components/voicedesign/: VoiceDesignHistoryPanel.qml  VoiceDesignSettingsPanel.qml  VoiceDesignStudioView.qml  VoicePresetPanel.qml
qml/pages/: DeveloperPage.qml  HFExplorerPage.qml  ModelsPage.qml  MyModelsPage.qml  SettingsPage.qml  SttPage.qml  TtsPage.qml  VoiceCloningPage.qml  VoiceDesignPage.qml  WelcomePage.qml
qml/pages/settings/: GeneralSettingsTab.qml  HardwareSettingsTab.qml  RuntimeSettingsTab.qml  SystemLogsTab.qml
resources/: app_icon.rc
scripts/: bootstrap.ps1  build.ps1  cmake_helpers.ps1  generate_catalog.py  installer.iss  installer.iss.in  package.ps1  run_tests.ps1  setup.ps1  sync_hf_thumbnails.py
src/: fix_mingw.h  main.cpp
src/api/: ApiServerService.cpp  ApiServerService.h
src/audio/: AudioPlayer.cpp  AudioPlayer.h  AudioRecorder.cpp  AudioRecorder.h  WavIO.cpp  WavIO.h  WaveformProvider.cpp  WaveformProvider.h
src/controllers/: AppController.cpp  AppController.h  AppUpdateService.cpp  AppUpdateService.h  AudioPreviewService.cpp  AudioPreviewService.h  DownloadInstallService.cpp  DownloadInstallService.h  ExampleManager.cpp  ExampleManager.h  FileAccessService.cpp  FileAccessService.h  HistoryRepository.cpp  HistoryRepository.h  HistoryService.cpp  HistoryService.h  IModelSession.h  IStudioAction.h  ModelLifecycleController.cpp  ModelLifecycleController.h  ModelSessionRegistry.cpp  ModelSessionRegistry.h  ModelsPathMigrationService.cpp  ModelsPathMigrationService.h  ModelsPathMigrator.cpp  ModelsPathMigrator.h  SttAudioDecoder.cpp  SttAudioDecoder.h  SttModelSession.cpp  SttModelSession.h  SttSessionController.cpp  SttSessionController.h  StudioActions.cpp  StudioActions.h  StudioConfigurationResolver.cpp  StudioConfigurationResolver.h  StudioSessionViewModel.cpp  StudioSessionViewModel.h  TtsSharedModelSession.cpp  TtsSharedModelSession.h  (+6 more)
src/core/: CapabilityFamilyModel.cpp  CapabilityFamilyModel.h  CatalogManager.cpp  CatalogManager.h  DownloadManager.cpp  DownloadManager.h  HFHubClient.cpp  HFHubClient.h  HardwareManager.cpp  HardwareManager.h  LocalizationManager.cpp  LocalizationManager.h  LogViewService.cpp  LogViewService.h  Logger.cpp  Logger.h  ModelManager.cpp  ModelManager.h  PathUtils.cpp  PathUtils.h  QmlLogger.cpp  QmlLogger.h  RegistryManager.cpp  RegistryManager.h  RuntimeManager.cpp  RuntimeManager.h  Settings.cpp  Settings.h  StudioCapabilityDescriptor.h  StudioCapabilityRegistry.cpp  StudioCapabilityRegistry.h  StudioSelectionRepository.cpp  StudioSelectionRepository.h  VoiceCloningUtils.cpp  VoiceCloningUtils.h
src/stt/: SttEngine.cpp  SttEngine.h  SttEngineInstance.cpp  SttEngineInstance.h  SttWorker.cpp  SttWorker.h
src/stt/backends/: NemotronSttBackend.cpp  (+8 more)
src/tts/: TtsEngine.cpp  TtsEngine.h  TtsEngineInstance.cpp  TtsEngineInstance.h  TtsRequestValidator.cpp  TtsRequestValidator.h  TtsWorker.cpp  TtsWorker.h
tests/: CMakeLists.txt  main.cpp  test_AudioPreviewService.cpp  test_AudioPreviewService.h  test_DownloadInstallService.cpp  test_DownloadInstallService.h  test_FileAccessService.cpp  test_FileAccessService.h  test_History.cpp  test_History.h  test_ModelsAndRuntimes.cpp  test_ModelsAndRuntimes.h  test_ModelsPathMigration.cpp  test_ModelsPathMigration.h  test_SttSession.cpp  test_SttSession.h
tests/mocks/: AppController.cpp  AudioPlayer.cpp  AudioRecorder.cpp  DownloadManager.cpp  HFHubClient.cpp  SttEngine.cpp  SttEngineInstance.cpp  TtsEngine.cpp  TtsEngineInstance.cpp
(+73 files in other folders)
